--- a/public/wisdomTeeth.html
+++ b/public/wisdomTeeth.html
@@ -542,11 +542,7 @@
                   Все манипуляции проводятся с применением безопасной и эффективной анестезии, чтобы удаление
                   не сопровождалось болью и стрессом. Мы предлагаем клиентам доступные цены на услуги и высокое качество сервиса.
                 </p>
-              </article>
-              <div class="service-block service-content-image">
-                <img src="./images/wisdom-teeth.jpg" alt="withdom-teeth" loading="lazy"> 
-              </div>
-              <article>
+                <img src="./images/wisdom-teeth.jpg" alt="withdom-teeth" loading="lazy">
                 <h4>
                   Сколько стоит удалить зуб мудрости: цена клиники
                 </h4>
@@ -570,7 +566,7 @@
                   Таким образом, сколько стоит вырвать зуб мудрости в Минске, зависит от многих индивидуальных факторов.
                 </p>
               </article>
-              <div class="service-block service-price single">
+              <div class="service-block service-price service-price__article single">
                 <div class="service-price-items">
                   <a href="#" class="service-price-row">
                     <div class="service-price-name">                      
@@ -595,70 +591,62 @@
                 <div class="block-title">
                   Наши Хирурги
                 </div>
-                <div class="doctors-wrapper">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <div class="doctor-card flex">
-                        <a href="javascript:void(0)" class="doctor-card-photo">
-                          <img src="./images/doctor-1-big.jpg" alt="doctor" loading="lazy">
-                        </a>
-                        <div class="doctor-card-info">
-                          <a href="javascript:void(0)" class="doctor-card-name">
-                            <div class="doctor-card-lastname">
-                              Николаеня
-                            </div>
-                            <div class="doctor-card-firstname">
-                              Александр Николаевич
-                            </div>                     
-                          </a>
-                          <div class="doctor-card-speciality">                                   
-                            Стоматолог-ортопед                                                                         
-                          </div>
-                          <div class="doctor-card-category">                                   
-                            Категория: Высшая                                                                         
-                          </div>
-                          <a href="#" class="ui-more right">
-                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                              <path d="M7 1L7 13" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                              <path d="M1 7L13 7" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            Подробнее
-                          </a>
+                <div class="doctors-list">                    
+                  <div class="doctor-card flex">
+                    <a href="javascript:void(0)" class="doctor-card-photo">
+                      <img src="./images/doctor-1-big.jpg" alt="doctor" loading="lazy">
+                    </a>
+                    <div class="doctor-card-info">
+                      <a href="javascript:void(0)" class="doctor-card-name">
+                        <div class="doctor-card-lastname">
+                          Николаеня
                         </div>
+                        <div class="doctor-card-firstname">
+                          Александр Николаевич
+                        </div>                     
+                      </a>
+                      <div class="doctor-card-speciality">                                   
+                        Стоматолог-ортопед                                                                         
                       </div>
-                    </div>                                            
+                      <div class="doctor-card-category">                                   
+                        Категория: Высшая                                                                         
+                      </div>
+                      <a href="#" class="ui-more right">
+                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+                          <path d="M7 1L7 13" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M1 7L13 7" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        Подробнее
+                      </a>
+                    </div>
                   </div>
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <div class="doctor-card flex single">
-                        <a href="javascript:void(0)" class="doctor-card-photo">
-                          <img src="./images/doctor-2-big.jpg" alt="doctor" loading="lazy">
-                        </a>
-                        <div class="doctor-card-info">
-                          <a href="javascript:void(0)" class="doctor-card-name">
-                            <div class="doctor-card-lastname">
-                              Трепышко
-                            </div>
-                            <div class="doctor-card-firstname">
-                              Игорь Викторович
-                            </div>                     
-                          </a>
-                          <div class="doctor-card-speciality">                                   
-                            Стоматолог-ортопед                                                                         
-                          </div>
-                          <div class="doctor-card-category">                                   
-                            Категория: Высшая                                                                         
-                          </div>
-                          <a href="#" class="ui-more right">
-                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                              <path d="M7 1L7 13" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                              <path d="M1 7L13 7" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            Подробнее
-                          </a>
+                  <div class="doctor-card flex single">
+                    <a href="javascript:void(0)" class="doctor-card-photo">
+                      <img src="./images/doctor-2-big.jpg" alt="doctor" loading="lazy">
+                    </a>
+                    <div class="doctor-card-info">
+                      <a href="javascript:void(0)" class="doctor-card-name">
+                        <div class="doctor-card-lastname">
+                          Трепышко
                         </div>
-                      </div>    
-                    </div>  
+                        <div class="doctor-card-firstname">
+                          Игорь Викторович
+                        </div>                     
+                      </a>
+                      <div class="doctor-card-speciality">                                   
+                        Стоматолог-ортопед                                                                         
+                      </div>
+                      <div class="doctor-card-category">                                   
+                        Категория: Высшая                                                                         
+                      </div>
+                      <a href="#" class="ui-more right">
+                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+                          <path d="M7 1L7 13" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M1 7L13 7" stroke="#319DAC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        Подробнее
+                      </a>
+                    </div>
                   </div>
                 </div>
               </section>
