--- a/src/contacts.html
+++ b/src/contacts.html
@@ -760,9 +760,11 @@
               <div class="requisites-text-title">
                 РЕКВИЗИТЫ
               </div>
-              <div class="requisites-text-name">
-                Общество с ограниченной ответственностью «Дентополис»
-              </div>
+              <p>
+                <strong>
+                  Общество с ограниченной ответственностью «Дентополис»
+                </strong>                
+              </p>
               <p>
                 220125, г. Минск, ул. Уручская, д. 7, пом. 2Н. Директор Зинович Александр Васильевич,<br> (на основании Устава) УНП 190890962, ОКПО 377424695000, 
               </p>
