--- a/src/implantation.html
+++ b/src/implantation.html
@@ -484,17 +484,10 @@
                   Несмотря на более высокую стоимость, имплантация зубов уверенно вытесняет классический метод зубопротезирования.
                   Поскольку не нужно обтачивать соседние здоровые зубы и удалять в них нервы, исключен риск их потери.
                 </p>
-              </article>
-            
-              <div class="service-video service-block">
-                <div class="service-video-title"> 
+                <h4>
                   Проблемы, решаемые дентальной имплантацией
-                </div>
-                <div class="service-video-wrapper">
-                  <video src="./media/problemy-reshaemye-dentalnoj-implantacziej.mp4" controls controlslist="nodownload"></video> 
-                </div>
-              </div>
-              <article>
+                </h4>
+                <video src="./media/problemy-reshaemye-dentalnoj-implantacziej.mp4" controls controlslist="nodownload"></video>
                 <h4>
                   Показания к имплантации зубов:
                 </h4>
@@ -556,98 +549,86 @@
                 <p>
                   Также поставить импланты в Минске можно только при условии завершения роста челюсти. Другие возрастные ограничения отсутствуют.
                 </p>
-              </article>
-              <div class="service-video service-block">                
-                <div class="service-video-wrapper">
-                  <video src="./media/protivopokazaniya.mp4" controls controlslist="nodownload"></video>
-                </div>
-              </div>
-              <article>
+                <video src="./media/protivopokazaniya.mp4" controls controlslist="nodownload"></video>
                 <h4>
                   Имплантация зубов верхней челюсти и нижней: основные этапы
                 </h4>
                 <ol class="ui-list ui-list-num">
-                  <li>                   
+                  <li>
                     Классическая имплантация зубов «под ключ», которая проводится в два этапа. Первый: если требуется,
                     врач удаляет разрушенный зуб. При необходимости наращивает костную ткань, когда собственной недостаточно.
                     Затем устанавливает имплантат. На втором этапе через определенное время (2–6 месяцев) устанавливается подобранная коронка.
-                    При данном способе расчет осуществляется за каждый выполненный этап.                       
+                    При данном способе расчет осуществляется за каждый выполненный этап.
                   </li>
-                  <li>                    
+                  <li>
                     Одномоментная процедура: удаление зуба и замещение его имплантатом с возможностью изготовления по показаниям временной конструкции сразу.
-                    Такой метод сокращает сроки протезирования. При одномоментной процедуре расчет происходит сразу.                    
-                  </li>                                                                                     
+                    Такой метод сокращает сроки протезирования. При одномоментной процедуре расчет происходит сразу.
+                  </li>
                 </ol>
                 <p>
                   Изготовление временной коронки при любом из способов идеально подходит для тех, кто постоянно контактирует
                   с людьми и не может длительный период быть без зубов.
                 </p>
-              </article> 
-              <div class="service-interwiev service-block">
-                <div class="service-interwiev-wrapper">
-                  <div class="service-interwiev-main">
-                    <div class="service-interwiev-text">
-                      <p>
-                        В нашу клинику обращаются пациенты со многими вопросами, но вопросов касательно одного из самых сложных стоматологических направлений — имплантация — сегодня все больше и больше.
-                      </p>
-                      <p>
-                        Одни боятся решиться на то или иное вмешательство и не понимают, когда уже откладывать лечение нельзя; вторых пугает неизвестность и самого процесса и результата; третьи постоянно находятся в поиске своего врача, сравнивают клиники и цены. 
-                      </p>
-                      <p>
-                        Сегодня многие страхи и опасения пациентов мы попросили развеять нашего врача-стоматолога-хирурга, имплантолога Крата Максима Игоревича.
-                      </p>
-                    </div>                                    
-                  </div>
-                  <div class="service-interwiev-preview">
-                    <div class="service-interwiev-image">
-                      <img src="./images/interwiev-photo-1.jpg" alt="doctor" loading="lazy">
+                <div class="service-interwiev service-block">
+                  <div class="service-interwiev-wrapper">
+                    <div class="service-interwiev-main">
+                      <div class="service-interwiev-text">
+                        <p>
+                          В нашу клинику обращаются пациенты со многими вопросами, но вопросов касательно одного из самых сложных стоматологических направлений — имплантация — сегодня все больше и больше.
+                        </p>
+                        <p>
+                          Одни боятся решиться на то или иное вмешательство и не понимают, когда уже откладывать лечение нельзя; вторых пугает неизвестность и самого процесса и результата; третьи постоянно находятся в поиске своего врача, сравнивают клиники и цены. 
+                        </p>
+                        <p>
+                          Сегодня многие страхи и опасения пациентов мы попросили развеять нашего врача-стоматолога-хирурга, имплантолога Крата Максима Игоревича.
+                        </p>
+                      </div>                                    
                     </div>
-                    <div class="service-interwiev-quote">
-                      <p>
-                        «Я рад, что удалось уберечь пациента от дорогостоящей операции по наращиванию костной ткани»
-                      </p>
+                    <div class="service-interwiev-preview">
+                      <div class="service-interwiev-image">
+                        <img src="./images/interwiev-photo-1.jpg" alt="doctor" loading="lazy">
+                      </div>
+                      <div class="service-interwiev-quote">
+                        <p>
+                          «Я рад, что удалось уберечь пациента от дорогостоящей операции по наращиванию костной ткани»
+                        </p>
+                      </div>
                     </div>
                   </div>
+                  <a href="#" class="ui-btn ui-btn-green">
+                    Читать интервью
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> 
+                  </a>
                 </div>
-                <a href="#" class="ui-btn ui-btn-green">
-                  Читать интервью
-                  <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg> 
-                </a>
-              </div>
-              <article>
                 <h4>
                   Имплантация зубов под ключ в Минске: цены - 2023 года
-                </h4>               
+                </h4>
                 <p>
                   <b>Итоговая цена формируется в зависимости от</b>
                 </p>
                 <ul class="ui-list ui-list-plus">
-                  <li>                  
-                    количества отсутствующих зубов;                    
+                  <li>
+                    количества отсутствующих зубов;
                   </li>
-                  <li>                   
-                    используемой имплантационной системы;                   
+                  <li>
+                    используемой имплантационной системы;
                   </li>
-                  <li>                    
-                    вида коронок;                   
+                  <li>
+                    вида коронок;
                   </li>
-                  <li>                    
+                  <li>
                     количества расходных материалов.
-                  </li>                                
+                  </li>
                 </ul>
                 <p>
                   <b>В стоимость имплантации зубов также входит работа хирурга, ортопеда, зубного техника.</b>
-                </p>               
-              </article>
-              <div class="service-video service-block">                
-                <div class="service-video-wrapper">
-                  <video src="./media/stoimost-dentalnoj-implantaczii-1.mp4" controls controlslist="nodownload"></video> 
-                </div>
-              </div>              
-              <div class="service-price service-block">
+                </p>
+                <video src="./media/stoimost-dentalnoj-implantaczii-1.mp4" controls controlslist="nodownload"></video> 
+              </article>                         
+              <div class="service-price service-price__article service-block">
                 <div class="service-price-head">
                   Импланты
                 </div>
@@ -681,7 +662,7 @@
                       Импланты системы MegaGen AnyOne (Корея)
                     </div>
                     <div class="service-price-sum">
-                      от 1 080 BYN
+                      от 1 180 BYN
                     </div>
                   </a>
                   <a href="#" class="service-price-row">
@@ -707,15 +688,7 @@
                     <div class="service-price-sum">
                       от 1 450 BYN
                     </div>
-                  </a>
-                  <a href="#" class="service-price-row">
-                    <div class="service-price-name">
-                      Импланты системы Straumann (Швейцария)
-                    </div>
-                    <div class="service-price-sum">
-                      от 1 450 BYN
-                    </div>
-                  </a>
+                  </a>                  
                 </div>
                 <div class="service-price-all">
                   <a href="#" class="ui-btn ui-btn-green">
