--- a/src/contacts.html
+++ b/src/contacts.html
@@ -628,7 +628,7 @@
                       <input type="text" placeholder="Телефон" required name="number" id="number" class="ui-input number">
                     </div>
                     <div class="ui-field">
-                      <textarea name="message" id="message" required placeholder="Сообщение" class="ui-texarea"></textarea>
+                      <textarea name="message" id="message" required placeholder="Сообщение" class="ui-texarea ui-texarea__aside"></textarea>
                     </div>
                     <div class="feedback-form-send">
                       <label>
