--- a/src/reviews.html
+++ b/src/reviews.html
@@ -451,15 +451,18 @@
               Отзывы              
             </div>
             <div class="row">
-              <div class="col-lg-4">                       
-                <div style="width:512px;height:942px;overflow:hidden;position:relative;"><iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/1238485123?comments"></iframe><a href="https://yandex.by/maps/org/stomatologiya_dentopolis/1238485123/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Стоматология Дентополис на карте Минска — Яндекс Карты</a></div>
+              <div class="col-lg-4 col-sm-6">                       
+                <div class="reviews-yandex">
+                  <iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/1238485123?comments"></iframe>
+                  <a href="https://yandex.by/maps/org/stomatologiya_dentopolis/1238485123/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Стоматология Дентополис на карте Минска — Яндекс Карты</a>
+                </div>
               </div>
-              <div class="col-lg-4">                
+              <div class="col-lg-4 col-sm-6">                
                 <div class="ti-widget ti-goog">
-                  google отзывы
+                  <img src="./images/widget-google.jpg" alt="" style="height: 100%; width: auto;">
                 </div>                        
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-sm-12">
                 <div class="swiper vertical-slider reviews-slider__vertical">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -521,37 +524,17 @@
                       </div>
                     </div>
                   </div>
-                  
-                  <!-- <div class="slider-arrows">
-                    <div class="slider-prev">           
-                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                        <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>              
-                    </div>
-                    <div class="slider-next">
-                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                        <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>               
-                    </div>          
-                  </div>    -->
-
-                  <div class="vertical-arrows">
-                    <div class="vertical-arrows-prev">           
-                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                        <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>              
-                    </div>
-                    <div class="vertical-arrows-next">
-                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                        <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>               
-                    </div>          
-                  </div>                  
-                </div> 
+                  <div class="vertical-arrows bg-blue-light">
+                    <svg width="24" height="56" viewBox="0 0 24 56" fill="none" class="vertical-arrows-item vertical-arrows-prev">
+                      <path d="M12 55L12 4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M18 10L12 4L6 10" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <svg width="24" height="56" viewBox="0 0 24 56" fill="none" class="vertical-arrows-item vertical-arrows-next">
+                      <path d="M12 1L12 52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M18 46L12 52L6 46" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </div>
           </div>    
