--- a/public/implantation.html
+++ b/public/implantation.html
@@ -835,7 +835,7 @@
           <div class="swiper doctors-slider slider-four blue-light">
             <div class="swiper-wrapper">  
               <div class="swiper-slide">
-                <div class="doctor-card">
+                <div class="doctor-card doctor-card__slide">
                   <a href="javascript:void(0)" class="doctor-card-photo">
                     <img src="./images/doctor-1.jpg" alt="doctor" loading="lazy">
                   </a>
@@ -866,7 +866,7 @@
               </div>
 
               <div class="swiper-slide">
-                <div class="doctor-card">
+                <div class="doctor-card doctor-card__slide">
                   <a href="javascript:void(0)" class="doctor-card-photo">
                     <img src="./images/doctor-2.jpg" alt="doctor" loading="lazy">
                   </a>
@@ -897,7 +897,7 @@
               </div>
 
               <div class="swiper-slide">
-                <div class="doctor-card">
+                <div class="doctor-card doctor-card__slide">
                   <a href="javascript:void(0)" class="doctor-card-photo">
                     <img src="./images/doctor-3.jpg" alt="doctor" loading="lazy">
                   </a>
@@ -928,7 +928,7 @@
               </div>
 
               <div class="swiper-slide">
-                <div class="doctor-card">
+                <div class="doctor-card doctor-card__slide">
                   <a href="javascript:void(0)" class="doctor-card-photo">
                     <img src="./images/doctor-4.jpg" alt="doctor" loading="lazy">
                   </a>
@@ -959,7 +959,7 @@
               </div>
 
               <div class="swiper-slide">
-                <div class="doctor-card">
+                <div class="doctor-card doctor-card__slide">
                   <a href="javascript:void(0)" class="doctor-card-photo">
                     <img src="./images/doctor-5.jpg" alt="doctor" loading="lazy">
                   </a>
