--- a/public/index.html
+++ b/public/index.html
@@ -707,7 +707,7 @@
         </div>
       </section>
 
-      <section class="section-services bg-blue-light">
+      <section class="section-main-services bg-blue-light">
         <div class="container">
           <div class="section-title">
             Основные услуги
