--- a/public/vacancies.html
+++ b/public/vacancies.html
@@ -588,8 +588,8 @@
             <div class="contacts-map-wrapper">
               <div class="contacts-map" id="map"></div>
             </div> 
-            <div class="contacts-links-col">
-              <div class="contacts-links bg-blue">                      
+            <div class="contacts-links-col bg-blue">
+              <div class="contacts-links">                      
                 <div class="contacts-links-wrapper">
                   <div class="contacts-links-item">
                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
