--- a/src/about.html
+++ b/src/about.html
@@ -692,7 +692,7 @@
         </div>
       </section>
 
-      <section class="section section-services bg-blue">
+      <section class="section section-main-services bg-blue">
         <div class="container">
           <div class="section-title">
             Основные услуги
