--- a/src/reviews.html
+++ b/src/reviews.html
@@ -543,12 +543,12 @@
             <div class="container">
               <div class="feedback-wrapper">
                 <div class="row">
-                  <div class="col-lg-3">
+                  <div class="col-xl-3 col-lg-12">
                     <div class="feedback-title h3">
                       Оставить отзыв
                     </div>
                   </div>
-                  <div class="col-lg-9">
+                  <div class="col-xl-9 col-lg-12">
                     <form class="feedback-form" id="acide-appointment">
                       <div class="row">
                         <div class="col-lg-4">
@@ -571,7 +571,7 @@
                             <textarea name="message" id="message" required placeholder="Сообщение" class="ui-texarea"></textarea>
                           </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4 col-md-4">
                           <div class="agree-wrapper">
                             <label class="agree">
                               <input type="checkbox" class="ui-input checkbox">
